# als

./: .gitignore  README.md  gradle.properties
.github/workflows/: build.yml
app/: .gitignore  als.jks  build.gradle.kts  proguard-rules.pro  txc
app/ate/: Cargo.toml
app/ate/src/: desktop.rs  main.rs  mount.rs  mt.rs  off.rs  on.rs  termux.rs  txc.rs  umount.rs  umt.rs
app/linux-7.1-rc3/: .config
app/qdb/: Cargo.toml
app/qdb/src/: main.rs
app/src/main/: AndroidManifest.xml
app/src/main/java/sui/k/als/: App.kt  Hub.kt  MainActivity.kt  Splash.kt
app/src/main/java/sui/k/als/boot/: App.kt  Boot.kt  BootConfig.kt  BootIns.kt  BootMenu.kt  BootSU.kt  BootSession.kt  BootState.kt  BootSys.kt  BootSysInfo.kt  Home.kt  Hub.kt  Splash.kt
app/src/main/java/sui/k/als/dss/: DSS.kt
app/src/main/java/sui/k/als/ide/: IDE.kt
app/src/main/java/sui/k/als/set/: About.kt  Set.kt
app/src/main/java/sui/k/als/tty/: TTY.kt  TTYENV.kt  TTYEnv.kt  TTYHUB.kt  TTYHub.kt  TTYIME.kt  TTYIO.kt  TTYIns.kt  (+4 more)
app/src/main/res/drawable/: add_wght300_24px.xml  album.xml  archive.xml  arrow_forward.xml  chips.xml  crop_landscape.xml  delete.xml  hard_drive.xml  ic_launcher_foreground.xml  info.xml  memory.xml  monitor_wght300_24px.xml  play_arrow_wght300_24px.xml  power.xml  preview.xml  save.xml  square.xml  terminal_wght300_24px.xml  usb.xml  volume_up.xml  wifi.xml
app/src/main/res/values/: strings.xml
app/src/main/res/values-en/: strings.xml
app/vnc/: Cargo.toml
app/vnc/src/: main.rs  mouse.rs
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+59 files in other folders)
